添加连接服务器API
