# docs/swagger.yaml
@@ -335,6 +335,45 @@ paths:
       summary: 暂停 Docker 容器
       tags:
       - docker
+  /serverlogin:
+    post:
+      consumes:
+      - application/json
+      description: 使用用户名、密码和服务器IP进行登录
+      parameters:
+      - description: 用户名
+        in: query
+        name: username
+        required: true
+        type: string
+      - description: 密码
+        in: query
+        name: passwd
+        required: true
+        type: string
+      - description: 服务器IP
+        in: query
+        name: serverip
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 登录成功
+          schema:
+            type: string
+        "400":
+          description: 无效的输入
+          schema:
+            type: string
+        "500":
+          description: 内部服务器错误
+          schema:
+            type: string
+      summary: 登录服务器并建立 WebSocket 连接
+      tags:
+      - server
   /status:
     get:
       consumes:
@@ -377,6 +416,23 @@ paths:
       summary: 获取系统信息
       tags:
       - system
+  /terminal:
+    get:
+      description: 建立 WebSocket 连接，用于与服务器交互
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: WebSocket 连接成功
+          schema:
+            type: string
+        "500":
+          description: 内部服务器错误
+          schema:
+            type: string
+      summary: WebSocket 终端接口
+      tags:
+      - terminal
   /update-docker/{version}/{containerName}:
     post:
       consumes:
